--- a/src/app.html
+++ b/src/app.html
@@ -16,11 +16,13 @@
 		<script>
 			// On page load or when changing themes, best to add inline in `head` to avoid FOUC
 			if (
-				localStorage.getItem('mode') === 'dark' ||
-				(!('mode' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)
+				localStorage.getItem('theme') === 'dark' ||
+				(!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)
 			) {
+				localStorage.setItem('theme', 'dark')
 				document.documentElement.classList.add('dark');
 			} else {
+				localStorage.setItem('theme', 'light')
 				document.documentElement.classList.remove('dark');
 			}
 		</script>
